sample/asm/invalid_operand_types/iadd.asm
.function: main
    istore 1 1
    fstore 2 1.0
    iadd 3 1 2

    izero 0
    return
.end
